app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require_tree .
 */


html, body { 
  margin: 0; 
  padding: 0; 
  height: 100%;
  width: 100%;
  background-color: #ccc;
  font-family: 'Varela Round', sans-serif;
}

.navbar {
	margin: 0;
	-webkit-margin-before:0em;
	-webkit-margin-after:0em;
}

a:hover {
	-webkit-transition: all 0.4s ease;
	-moz-transition: all 0.4s ease;
	-o-transition: all 0.4s ease;
	transition: all 0.4s ease;
}

.navbar {
	color: white;
}

.navbar-brand {
	font-family: 'Poller One', cursive;

}

.nav_title {
	font-size: 25px;
	margin: -3px 0 0 -20px;
}

.subtitle {
	font-size: 20px;
	letter-spacing: 2px;
}

.nav_bird {
	width: 30px;
	height: auto;
	float: left;
	margin: -7px -4px 0px -3px;
	border-radius: 3px;
	-webkit-transition: all 0.4s ease;
	-moz-transition: all 0.4s ease;
	-o-transition: all 0.4s ease;
}

.nav_bird:hover {
	-webkit-box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.75);
	-moz-box-shadow:    0px 0px 15px 0px rgba(255, 255, 255, 0.75);
	box-shadow:         0px 0px 15px 0px rgba(255, 255, 255, 0.75);
}

#map { 
	float: left;
  position: absolute;
  top: 50px; 
  bottom: 0; 
  width: 100%;
}

.main_container {
	position: fixed;
	padding-top: 50px;
	width: 100%;
	height: 100%;
}

.map_div {
	float: left;
	width: 65%;
	height: 100%;
	padding: 0;
}

.content_div {
	float: right;
	position: relative;
	background-color: rgba(0,0,0,0.8);
	color: #fff;
	font-size: 20px;
	padding: 0px 10px 30px 10px;
	width: 35%;
	height: 100%;
	border: 0;
}

#welcome {
	text-align: center;
	margin: 40px 10px 10px 10px;
	font-size: 22px;
}

#welcome_title {
	line-height: 20px;
	margin: 20px 0 20px 0;
}

.bird_on_it {
	width: 50%;
	height: auto;
	display: block;
  margin: 0 auto;
  padding: 15px 0 15px 0;
  border-radius: 4px;
}

.content_header, .created_container_header {
	text-align: center;
	margin: 12px 5px 10px 20px;
}

#site-1 {
	color: #fff;
	height: 79%;
	width: 100%;
	margin: 5px;
	padding: 15px;
	overflow: scroll;
}

#site-1 img {
	width: 100%;
	height: auto;
}

hr {
	margin: 15px 0 0 0;
}

.site1_title {
	font-size: 30px;
	letter-spacing: 8px;
}

.site1_desc {
	font-size: 22px;
	letter-spacing: 3px;
}

.about_modal, .howitworks_modal {
	cursor: pointer;
}

/*The form*/
#name {
	height: 30px;
}

#new_checkin input,
#new_checkin textarea {
	color: #000;
	font-size: 17px;
	width: 100%;
}

#submit_button {
	margin-top: 4px;
}

#new_checkin #checkin_photo {
	color: #FFF;
	font-size: 17px;
	width: 100%;
}

#entry_form {
	margin: 10px;
}

.addPhotoButton {
	width: 100%;
}
/*end form style*/

body .commentModal {
	width: 350px;
	margin-left: auto;
  margin-right: auto;
}

.commentModal {
	font-size: 20px;
}



#back_button {
	display: none;
	top: 3000px;
	position: absolute;
}

.notice {
	color: red;
	font-size: 17px;
	text-align: center;
}

.notice_hide {
	display: none;
}

/*/////////all isotope css//////////*/
.isotope-item {
    z-index: 2;
}
.isotope-hidden.isotope-item {
    pointer-events: none;
    z-index: 1;
}
.isotope,
.isotope .isotope-item {
  /* change duration value to whatever you like */

    -webkit-transition-duration: 0.8s;
    -moz-transition-duration: 0.8s;
    transition-duration: 0.8s;
}
.isotope {
    -webkit-transition-property: height, width;
    -moz-transition-property: height, width;
    transition-property: height, width;
}
.isotope .isotope-item {
    -webkit-transition-property: -webkit-transform, opacity;
    -moz-transition-property: -moz-transform, opacity;
    transition-property: transform, opacity;
}
/* ////end isotope/// */

/*/////all checkins page styling////*/

.allCheckins {
	height: 80%;
	width: 100%;
}

.allcheckins_container > .allCheckins.isotope {
	margin-top: 20px;
}

#each_one {
	margin: 11px;
	padding: 10px;
	background-color: gray;
	border-radius: 15px;
	width: 31%;
	font-size: 20px;
}

#each_one img {
	border-radius: 10px;
	width: 100%;
	height: auto;
}

.allcheckins_container {
	background-color: rgba(0,0,0,0.8);
	color: #fff;
	padding: 50px 10px 30px 10px;
	width: 100%;
	border: 0; 
}

#locations_links a {
		background-color: #16a085;
		color: #ecf0f1;
		font-size: 16px;
		padding: 5px 15px 5px 15px;
		border-radius: 30px;
}

.all_of_them {
	width: 50%;
	margin: -13px auto -12px auto;
	display: block;
	text-align: center;	
	letter-spacing: 5px;
}

#locations_links {
	margin-left: 0.5%;
}

.filter_links {
	/*margin: -15px 0.4% 10px 0.3%;   -- optimized for iPad landscape*/
	margin: -15px 1.4% 10px 1.3%; /*-- optimized for laptop view*/
	display: inline;
	vertical-align: 20px;
}

#locations_links a:hover {
	text-decoration: none;
	color: #bdc3c7;
	background-color: #2c3e50;
	-webkit-transition: all 0.4s ease;
	-moz-transition: all 0.4s ease;
	-o-transition: all 0.4s ease;
	transition: all 0.4s ease;
}

.back_link, .back_link:hover {
	font-size: 30px; 
	margin-left: 40%; 
	text-decoration: none;
}

@media (max-width: 767px) {

	h2 {
		font-size: 24px;
	}

	#welcome {
		position: fixed;
		margin: 10px 10px 10px 10px;
	}

	#welcome_title {
		margin-top: 5px;
	}

	.welcome_title {
		font-size: 18px; 
		letter-spacing: 5px;
	}

	.welcome_subtitle {
		margin-top: -10px;
		font-size: 15px;
	}

	.bird_on_it {
		width: 80px;
		height: auto;
		float: left;
	  margin: 15px 5px 15px 10px;
	  padding-top: 0;
	}

	.nav_title {
		font-size: 16px;
		/*margin: -40px 10px 10px -10px;*/
		letter-spacing: -1px;
	}

	.subtitle {
		font-size: 13px;
		letter-spacing: 0px;
	}

	.nav_bird {
		display: none;
	}

	.site-1 {
		width: 100%;
		font-size: 20px;
		margin: 0px 20px 0 20px;
	}

	.content_div {
		position: absolute;
		width: 100%;
		height: 30%;
		bottom: 0;
		padding: 0; 
		z-index: 1000;
	}

	#back_button {
		background-color: #16a085;
		color: #ecf0f1;
		font-size: 16px;
		display: block;
		margin: 40px 5px 0px 0px;
		float: right;
		top: -40px;
		position: relative;
	}

	#back_button:hover {
		background-color: #1abc9c;
	}

	#site-title {
		font-size: 20px;
	}

	.site1_title {
		font-size: 25px;	
	}

	.site1_desc {
		font-size: 20px;
	}

	.content_header, .created_container_header {
		text-align: left;
		margin: 50px 5px 10px 20px;
	}

	#each_one {
		margin: 9px;
		padding: 9px;
		width: auto;
		font-size: 20px;
	}

	#each_one img {
		width: 100%;
		height: auto;
	}

	.back_link, .back_link:hover {
		font-size: 24px; 
		margin-left: 25%; 
		text-decoration: none;
	}

	.filter_links {
		margin-left: 5%;
	}


}

